Increased z-index to avoid overlap
Use of z-index at home-feed warranted increasing the z-index of the navbar just in case.

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -13,7 +13,7 @@
     
     height: auto;
     width: 100%;
-    z-index: 1;
+    z-index: 5;
 
     /*box-shadow: 0px 22px 30px -10px #023047;*/
     font-family: 'Segoe UI';
